etct_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd3
spec:
  ports:
    - name: client
      port: 2379
      targetPort: 2379
    - name: etcd3
      port: 2380
      targetPort: 2380
  selector:
    app: etcd3
