svc_old.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sdemo-svc-old
spec:
  ports:
    - name: k8sdemo-svc-old
      port: 8000
      targetPort: 60001
  selector:
    app: k8sdemo-old
  type: NodePort
